--- a/node.jquery.mobile/public/views/partials/about.html
+++ b/node.jquery.mobile/public/views/partials/about.html
@@ -2,7 +2,7 @@
     <div data-role="header" class="ui-bar-a ui-header" role="banner">
         <a href="/" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
             <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
-        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">{title} - about</h1>
+        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">{title}</h1>
     </div>
     <div data-role="content" class="ui-content" role="main">
         <h2>{title}</h2>
