--- a/node.html5.boilerplate/public/views/github.html
+++ b/node.html5.boilerplate/public/views/github.html
@@ -10,9 +10,10 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="../css/style.css">
-  <script src="/javascripts/socket.io.js"></script>
-  <script src="/javascripts/node.plates.js"></script>
-  <script src="/javascripts/modernizr-2.5.3.min.js"></script>
+    <script src="/javascripts/modernizr-2.5.3.min.js"></script>
+    <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+    <script src="/javascripts/socket.io.js"></script>
+    <script src="/javascripts/node.plates.js"></script>
     <!--server-->
     <script>
         var page = 'github';
