--- a/node.jquery.mobile/public/views/account.html
+++ b/node.jquery.mobile/public/views/account.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
+    <script src="/javascripts/uri.js"></script>
     <script src="/javascripts/socket.io.js"></script>
     <script src="/javascripts/node.plates.js"></script>
 
@@ -17,7 +18,7 @@
         var page = 'account';
         $.mobile.autoInitializePage = true;
     </script>
-    <script src="/javascripts/bootstrap_secure_server_templating.js"></script>
+    <script src="/javascripts/bootstrap_server_templating.js"></script>
 
 
     <!--compile
