--- a/node.html5.boilerplate/public/views/home.html
+++ b/node.html5.boilerplate/public/views/home.html
@@ -5,13 +5,14 @@
 <!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="X-UA-Compat   ible" content="IE=edge,chrome=1">
     <title>{title}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script>window.jQuery || document.write('<script src="/javascripts/jquery-1.7.1.min.js"><\/script>')</script>
     <script src="/javascripts/modernizr-2.5.3.min.js"></script>
-    <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <script src="/javascripts/uri.js"></script>
     <script src="/javascripts/underscore-min.js"></script>
     <script src="/javascripts/backbone-min.js"></script>
@@ -19,7 +20,6 @@
     <!--server-->
     <script>
         var page = 'home';
-        $.mobile.autoInitializePage = true;
     </script>
     <script src="/javascripts/bootstrap_server_templating.js"></script>
 </head>
@@ -36,12 +36,10 @@
         </ul>
       </nav>
       <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
-      <article>{#articles}<h1>{title}</h1><br/>{date}<br/>{body}</li>{/articles}</article>
+      {#articles}<h1>{title}</h1><br/>{date}<br/>{body}</li>{/articles}
   </section>
   <footer>
   </footer>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/javascripts/jquery-1.7.1.min.js"><\/script>')</script>
   <script src="/javascripts/plugins.js"></script>
 </body>
 </html>
